fix(SUP-49640): [UMICH] CTA button word wrap cuts off words

--- a/src/components/text-with-tooltip/text-with-tooltip.scss
+++ b/src/components/text-with-tooltip/text-with-tooltip.scss
@@ -4,6 +4,5 @@
         display: -webkit-box; 
         overflow: hidden;
         text-overflow: ellipsis;
-        word-break: break-all;
     }
 }
